--- a/OctovanChallengeSolution/OctovanAPI/appsettings.json
+++ b/OctovanChallengeSolution/OctovanAPI/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SqlServerConnectionString": "Data Source=DESKTOP-QGNP2IT;Initial Catalog=OctoSocialDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "SqlServerConnectionString": "Data Source=DESKTOP-QGNP2IT;Initial Catalog=OctoSocialDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "AzureBlobStorageConnectionString": ""
   }
 }
