--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-OctovanChallangeSolution/.vs
-OctovanChallangeSolution/OctovanAPI/bin
-OctovanChallangeSolution/OctovanAPI/obj
+OctovanChallangeSolution/.vs/
+OctovanChallangeSolution/OctovanAPI/bin/
+OctovanChallangeSolution/OctovanAPI/obj/
 OctovanChallangeSolution/OctovanAPI/appsettings.Development.json
