blob storage features configured

--- a/OctovanChallengeSolution/OctovanAPI/appsettings.json
+++ b/OctovanChallengeSolution/OctovanAPI/appsettings.json
@@ -6,6 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "BlobStorageRootPath": "https://octovan.blob.core.windows.net/",
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "SqlServerConnectionString": "Data Source=DESKTOP-QGNP2IT;Initial Catalog=OctoSocialDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
